# SMPLpp

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
SMPL++/include/definition/: def.h
SMPL++/include/smpl/: BlendShape.h  JointRegression.h  LinearBlendSkinning.h  SMPL.h  WorldTransformation.h
SMPL++/include/toolbox/: Tester.h  TorchEx.hpp
SMPL++/scripts/: json_to_cbor.py  preprocess.py
SMPL++/src/definition/: def.cpp
SMPL++/src/smpl/: BlendShape.cpp  JointRegression.cpp  LinearBlendSkinning.cpp  SMPL.cpp  WorldTransformation.cpp
data/: smpl_female.json  smpl_female.npz  smpl_male.json  smpl_male.npz
docs/: REFERENCE.md
include/definition/: def.h
include/smpl/: BlendShape.h  JointRegression.h  LinearBlendSkinning.h  SMPL.h  WorldTransformation.h
include/toolbox/: Exception.h  Singleton.hpp  Tester.h  TorchEx.hpp  XtensorEx.hpp
source/: main.cpp
source/definition/: def.cpp
source/smpl/: BlendShape.cpp  JointRegression.cpp  LinearBlendSkinning.cpp  SMPL.cpp  WorldTransformation.cpp
source/toolbox/: Exception.cpp  Tester.cpp  TorchEx.cpp  XtensorEx.cpp
src/: main.cpp
src/smpl/: JointRegression.cpp
src/toolbox/: Exception.cpp
